# BetBlocker

./: .env.example  .gitattributes  .gitignore  .hadolint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  release-please-config.json  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  merge.yml  pages.yml  pr-title.yml  release.yml
crates/bb-agent-core/: Cargo.toml
crates/bb-agent-core/src/: lib.rs
crates/bb-agent-core/src/bypass_detection/: events.rs  known_processes.rs  mod.rs  proxy.rs  response.rs  tor.rs  traits.rs  vpn.rs
crates/bb-agent-core/src/bypass_detection/linux/: mod.rs  netlink_monitor.rs  process_scanner.rs  proxy_monitor.rs
crates/bb-agent-core/src/comms/: certificate.rs  client.rs  heartbeat.rs  mod.rs  registration.rs  reporter.rs  sync.rs
crates/bb-agent-core/src/config/: mod.rs
crates/bb-agent-core/src/events/: emitter.rs  mod.rs  privacy.rs  store.rs
crates/bb-agent-core/src/federated/: anonymizer.rs  mod.rs
crates/bb-agent-core/src/tamper/: integrity.rs  mod.rs  watchdog.rs
crates/bb-agent-linux/: Cargo.toml
crates/bb-agent-linux/src/: main.rs  nftables.rs  platform.rs
crates/bb-agent-macos/: Cargo.toml
crates/bb-agent-macos/src/: dns_redirect.rs  main.rs  platform.rs
crates/bb-agent-plugins/: Cargo.toml
crates/bb-agent-plugins/src/: lib.rs  registry.rs  traits.rs  types.rs
crates/bb-agent-plugins/src/app_process/: install_watcher.rs  interceptor.rs  mod.rs  quarantine.rs  scanner.rs
crates/bb-agent-plugins/src/blocklist/: app_signatures.rs  cache.rs  mod.rs
crates/bb-agent-plugins/src/dns_resolver/: handler.rs  mod.rs
crates/bb-agent-plugins/src/hosts_file/: mod.rs  platform.rs
crates/bb-agent-plugins/tests/: app_process_integration.rs
crates/bb-agent-windows/: Cargo.toml
crates/bb-agent-windows/src/: dns_redirect.rs  main.rs  platform.rs
crates/bb-api/: Cargo.toml
crates/bb-api/src/: config.rs  error.rs  extractors.rs  lib.rs  main.rs  response.rs  state.rs
crates/bb-api/src/middleware/: ip_strip.rs  mod.rs  request_id.rs
crates/bb-api/src/routes/: accounts.rs  admin_app_signatures.rs  admin_blocklist.rs  analytics.rs  auth.rs  billing.rs  blocklist.rs  devices.rs  enrollments.rs  events.rs  federated.rs  health.rs  mod.rs  organizations.rs  partners.rs  review_queue.rs  tor_exits.rs
crates/bb-api/src/services/: account_service.rs  analytics_service.rs  app_signature_service.rs  auth_service.rs  blocklist_service.rs  device_service.rs  enrollment_service.rs  enrollment_token_service.rs  event_service.rs  export_service.rs  federated_service.rs  mod.rs  organization_service.rs  partner_service.rs  review_queue_service.rs  tor_exits_service.rs
crates/bb-api/tests/: auth_test.rs  device_test.rs  enrollment_test.rs  partner_test.rs
crates/bb-api/tests/common/: mod.rs
crates/bb-cli/: Cargo.toml
crates/bb-common/: Cargo.toml
crates/bb-proto/: Cargo.toml  build.rs
crates/bb-shim-android/: Cargo.toml
crates/bb-shim-ios/: Cargo.toml
crates/bb-shim-linux/: Cargo.toml
crates/bb-shim-linux/src/: apparmor.rs  ebpf.rs  lib.rs  mac.rs  selinux.rs
crates/bb-shim-macos/: Cargo.toml
crates/bb-shim-macos/src/: dns_monitor.rs  file_protect.rs  installer.rs  keychain.rs  launchd.rs  lib.rs  network_ext.rs  platform.rs  xpc.rs
crates/bb-shim-windows/: Cargo.toml
crates/bb-shim-windows/src/: acl.rs  dns_monitor.rs  installer.rs  keystore.rs  lib.rs  minifilter.rs  service.rs  updater.rs  wfp.rs
crates/bb-worker/: Cargo.toml
crates/bb-worker/src/: main.rs  scheduler.rs  tor_exits.rs
crates/bb-worker/src/analytics/: mod.rs  trends.rs
crates/bb-worker/src/discovery/: classifier.rs  crawler.rs  mod.rs  scorer.rs
crates/bb-worker/src/discovery/crawlers/: affiliate.rs  dns_zone.rs  mod.rs  registry.rs  search.rs  whois.rs
crates/bb-worker/src/federated/: aggregator.rs  mod.rs  promoter.rs
data/: blocklist-seed.txt
deploy/: .env.example  docker-compose.dev.yml  docker-compose.yml
deploy/apparmor/: betblocker-agent  betblocker-files
deploy/docker/: Dockerfile.agent-linux  Dockerfile.agent-linux-aarch64  Dockerfile.api  Dockerfile.web  Dockerfile.worker
deploy/linux/: betblocker-agent.service  install.sh  uninstall.sh
deploy/macos/: build-pkg.sh  com.betblocker.agent.plist  distribution.xml  notarize.sh  uninstall.sh
deploy/selinux/: betblocker.fc  betblocker.if  betblocker.te
deploy/windows/: betblocker.wxs
docs/: api-reference.md  architecture.md  getting-started.md  self-hosting.md
docs/architecture/: agent-protocol.md  api-spec.md  database-schema.md  (+2 more)
migrations/: 0001_create_enum_types.sql  0002_create_accounts.sql  0003_create_refresh_tokens.sql  0004_create_partner_relationships.sql  0005_create_organizations.sql  0006_create_organization_members.sql  0007_create_devices.sql  0008_create_device_certificates.sql  0009_create_enrollments.sql  0010_create_enrollment_unenroll_requests.sql  0011_create_blocklist_entries.sql  0012_create_blocklist_versions.sql  0013_create_blocklist_version_entries.sql  0014_create_federated_reports.sql  0015_create_events.sql  0016_create_reporting_snapshots.sql  0017_create_subscriptions.sql  0018_create_audit_log.sql  0019_create_rls_policies.sql  0020_create_audit_triggers.sql  0021_seed_blocklist.sql  0022_extend_organizations.sql  0023_create_organization_devices.sql  0024_create_enrollment_tokens.sql  0025_extend_org_members.sql  0026_create_discovery_candidates.sql  0027_create_federated_tables.sql  0028_create_app_signatures.sql  0029_seed_app_signatures.sql  0030_enable_timescaledb.sql  0031_create_hourly_block_stats.sql  0032_create_daily_block_stats.sql  0033_create_analytics_trends.sql  0034_create_tor_exit_nodes.sql  0035_fix_federated_reports.sql  V001__create_enum_types.sql  V002__create_accounts.sql  V003__create_refresh_tokens.sql  V004__create_partner_relationships.sql  V005__create_organizations.sql  (+16 more)
scripts/: setup.sh
site/: astro.config.mjs  package-lock.json  package.json
web/: .env.local.example  eslint.config.mjs  package-lock.json  package.json
(+229 files in other folders)
