[package]
name = "bb-agent-linux"
version.workspace = true
edition.workspace = true

[dependencies]
bb-common = { path = "../bb-common" }
bb-agent-core = { path = "../bb-agent-core" }
bb-agent-plugins = { path = "../bb-agent-plugins" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific deps will go here
