[package]
name = "bb-agent-macos"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bb-agent-macos"
path = "src/main.rs"

[dependencies]
bb-common = { path = "../bb-common" }
bb-agent-core = { path = "../bb-agent-core" }
bb-agent-plugins = { path = "../bb-agent-plugins" }
bb-shim-macos = { path = "../bb-shim-macos" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
