[package]
name = "bb-agent-windows"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bb-agent-windows"
path = "src/main.rs"

[dependencies]
bb-common = { path = "../bb-common" }
bb-agent-core = { path = "../bb-agent-core" }
bb-agent-plugins = { path = "../bb-agent-plugins" }
bb-shim-windows = { path = "../bb-shim-windows" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
