[package]
name = "bb-api"
version.workspace = true
edition.workspace = true

[dependencies]
bb-common = { path = "../bb-common" }
bb-proto = { path = "../bb-proto" }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }

[features]
default = ["hosted"]
hosted = []

[lints]
workspace = true
