[package]
name = "bb-api"
version.workspace = true
edition.workspace = true

[dependencies]
bb-common = { path = "../bb-common" }
# bb-proto = { path = "../bb-proto" }  # Not needed for API server
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
ring = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
bcrypt = "0.17"
hex = "0.4"
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
redis = { version = "0.27", features = ["tokio-comp"] }

# Optional billing dependency
stripe-rust = { version = "0.38", optional = true, package = "async-stripe", default-features = false, features = ["runtime-tokio-hyper"] }

[features]
default = ["hosted"]
hosted = []
billing = ["dep:stripe-rust"]

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { workspace = true }
sqlx = { workspace = true }
ring = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
