[package]
name = "bb-shim-windows"
version.workspace = true
edition.workspace = true

[features]
kernel-drivers = []

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_NetworkManagement_Dns",
    "Win32_Networking_WinSock",
] }

[lints]
workspace = true
